--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
+/* Import Inter font from Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --color-gray-200: oklch(0.928 0.006 264.531);
+  --color-gray-500: oklch(0.551 0.027 264.364);
+  --color-gray-900: oklch(0.21 0.034 264.665);
+
+  --background: oklch(0.967 0.003 264.542);
+  --foreground: --color-gray-500;
+
+  font-family: "Inter", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--foreground);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,6 +32,7 @@ a:hover {
 }
 
 body {
+  background-color: var(--background);
   margin: 0;
   display: flex;
   place-items: center;
