--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 :root {
+  --color-gray-50: oklch(0.985 0.002 247.839);
   --color-gray-200: oklch(0.928 0.006 264.531);
+  --color-gray-300: oklch(0.872 0.01 258.338);
   --color-gray-500: oklch(0.551 0.027 264.364);
   --color-gray-900: oklch(0.21 0.034 264.665);
 
   --background: oklch(0.967 0.003 264.542);
   --foreground: --color-gray-500;
+  --muted-foreground: --color-gray-300;
 
   font-family: "Inter", sans-serif;
   line-height: 1.5;
@@ -20,6 +23,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 a {
