--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   --color-gray-500: oklch(0.551 0.027 264.364);
   --color-gray-900: oklch(0.21 0.034 264.665);
 
+  --color-red-500: oklch(0.551 0.027 264.364);
+
   --background: oklch(0.967 0.003 264.542);
   --foreground: --color-gray-500;
   --muted-foreground: --color-gray-300;
